.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Job__c.object
<CustomObject>
    <fields>
        <fullName>sked__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Templated Jobs</relationshipLabel>
        <relationshipName>Templated_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Can_Be_Declined__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can Be Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Templated Jobs</relationshipLabel>
        <relationshipName>Templated_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Customer_Confirmation_Status__c</fullName>
        <label>Customer Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <label>Duration</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sked__Is_Group_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Group Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Job_Allocation_Time_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Job Allocation Time Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Templated Jobs</relationshipLabel>
        <relationshipName>Templated_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Max_Attendees__c</fullName>
        <label>Max Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Min_Attendees__c</fullName>
        <label>Min Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Notes_Comments__c</fullName>
        <label>Notes Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Notify_Period__c</fullName>
        <label>Notify Period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Templated Jobs</relationshipLabel>
        <relationshipName>Templated_Jobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Schedule_Template__c</fullName>
        <label>Schedule Template</label>
        <referenceTo>sked__Schedule_Template__c</referenceTo>
        <relationshipLabel>Templated Jobs</relationshipLabel>
        <relationshipName>Templated_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Start_Offset_Days__c</fullName>
        <label>Start Offset Days</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_Time_Of_Day__c</fullName>
        <label>Start Time Of Day</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Break Fix</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Virtual_Meeting_Id__c</fullName>
        <label>Virtual Meeting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Virtual_Meeting_Info__c</fullName>
        <label>Virtual Meeting Info</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Virtual_Meeting_URL__c</fullName>
        <label>Virtual Meeting URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Templated Job</label>
    <nameField>
        <displayFormat>TJB-{0000}</displayFormat>
        <label>Templated Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__DurationMustBeGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Duration__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>sked__Duration__c</errorDisplayField>
        <errorMessage>A Templated Job&apos;s duration must be greater than 0 minutes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__MaxAttendeesNotGreaterThanMin</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  NOT(ISNULL(sked__Min_Attendees__c)),
  NOT(ISNULL(sked__Min_Attendees__c)), 
  sked__Min_Attendees__c &gt; sked__Max_Attendees__c
)</errorConditionFormula>
        <errorDisplayField>sked__Min_Attendees__c</errorDisplayField>
        <errorMessage>If Min and Max Attendees are set, Min must not be more than Max.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__MaxAttendeesPositive</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISNULL(sked__Max_Attendees__c)), sked__Max_Attendees__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>sked__Max_Attendees__c</errorDisplayField>
        <errorMessage>If Max Attendees is set it must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__MinAttendeesNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISNULL(sked__Min_Attendees__c)), sked__Min_Attendees__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>sked__Min_Attendees__c</errorDisplayField>
        <errorMessage>If Min Attendees is set it must not be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__QuantityNullOrPositive</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Quantity__c ) ) , sked__Quantity__c  &lt;= 0 )</errorConditionFormula>
        <errorDisplayField>sked__Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be null or greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__StartOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start_Offset_Days__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
        <errorMessage>Start Offset Days Must be non-negative</errorMessage>
    </validationRules>
</CustomObject>